micro-java/target/classes/META-INF/jkube/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      app.openshift.io/vcs-ref: micro-config
      jkube.io/git-url: https://github.com/Marck/study-DO288-apps.git
      app.openshift.io/vcs-uri: https://github.com/Marck/study-DO288-apps.git
      jkube.io/git-commit: fea8daa858b4f8b33802fab9a6bd2a8fb92d991d
      jkube.io/git-branch: micro-config
      prometheus.io/path: /metrics
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      expose: "true"
      app: micro-java
      provider: jkube
      version: "1.0"
      group: com.redhat.training.openshift.hello
    name: micro-java
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: micro-java
      provider: jkube
      group: com.redhat.training.openshift.hello
- apiVersion: v1
  kind: ConfigMap
  metadata:
    labels:
      app: micro-java
      provider: jkube
      version: "1.0"
      group: com.redhat.training.openshift.hello
    name: configmap-hello
  data:
    APP_MSG: this is a new value
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      app.openshift.io/vcs-ref: micro-config
      jkube.io/git-url: https://github.com/Marck/study-DO288-apps.git
      app.openshift.io/vcs-uri: https://github.com/Marck/study-DO288-apps.git
      jkube.io/git-commit: fea8daa858b4f8b33802fab9a6bd2a8fb92d991d
      jkube.io/git-branch: micro-config
    labels:
      app: micro-java
      provider: jkube
      version: "1.0"
      group: com.redhat.training.openshift.hello
    name: micro-java
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: micro-java
        provider: jkube
        group: com.redhat.training.openshift.hello
    template:
      metadata:
        labels:
          app: micro-java
          provider: jkube
          version: "1.0"
          group: com.redhat.training.openshift.hello
        name: micro-java
      spec:
        containers:
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: micro-java:1.0
          imagePullPolicy: IfNotPresent
          name: quarkus
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          securityContext:
            privileged: false
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      app.openshift.io/vcs-ref: micro-config
      jkube.io/git-url: https://github.com/Marck/study-DO288-apps.git
      app.openshift.io/vcs-uri: https://github.com/Marck/study-DO288-apps.git
      jkube.io/git-commit: fea8daa858b4f8b33802fab9a6bd2a8fb92d991d
      jkube.io/git-branch: micro-config
    labels:
      app: micro-java
      provider: jkube
      version: "1.0"
      group: com.redhat.training.openshift.hello
    name: micro-java
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: micro-java
